kubernetes/unifi-network-application/components/unifi-network-application/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
  labels:
    helm.sh/chart: unifi-network-application-2.6.1
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
    app.kubernetes.io/version: "8.0.24"
    app.kubernetes.io/managed-by: Helm
  annotations:
    checkov.io/skip3: CKV_K8S_20=Not Supported
    checkov.io/skip4: CKV_K8S_23=Not Supported
    checkov.io/skip5: CKV_K8S_22=Not Supported
    checkov.io/skip6: CKV_K8S_16=Not Supported
    checkov.io/skip7: CKV_K8S_40=Not Supported
    checkov.io/skip8: CKV_K8S_43=Not Supported
    gitops-ci.k8s.io/exempt-image-checksum: "docker.io/linuxserver/unifi-network-application"
spec:
  serviceName: unifi-network-application
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-network-application
      app.kubernetes.io/instance: unifi-network-application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-network-application
        app.kubernetes.io/instance: unifi-network-application
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "br1",
            "namespace": "default",
            "mac": "10:00:00:00:01:36",
            "ips": ["10.0.0.136/24"],
            "default-route": ["10.0.0.1"]
          }]
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: false
      automountServiceAccountToken: false
      serviceAccountName: unifi-network-application
      containers:
        - name: unifi-network-application
          image: docker.io/linuxserver/unifi-network-application:8.5.6-ls68
          securityContext:
            runAsNonRoot: false
            privileged: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: https
            - containerPort: 8443
              protocol: TCP
              name: https-admin
            - containerPort: 8880
              protocol: TCP
              name: http
            - containerPort: 8843
              protocol: TCP
              name: https-api
            - containerPort: 6789
              protocol: TCP
              name: apollo
            - containerPort: 10001
              protocol: UDP
              name: apollo-udp
            - containerPort: 3478
              protocol: TCP
              name: apollo-stun
          readinessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 5m
              memory: 960Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: RestartContainer
          volumeMounts:
            - mountPath: "/config"
              name: data
            - mountPath: "/config/data/backup"
              name: backup-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-data
        - name: backup-data
          persistentVolumeClaim:
            claimName: unifi-backup
      enableServiceLinks: false
