kubernetes/unifi-network-application/components/unifi-network-application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-network-application-tcp
  namespace: unifi-network-application
  labels:
    helm.sh/chart: unifi-network-application-2.6.1
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
    app.kubernetes.io/version: "8.0.24"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kube-vip.io/egress: "true"
    kube-vip.io/egress-internal: "true"
    kube-vip.io/loadbalancerIPs: "10.0.0.132"
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: LoadBalancer
  loadBalancerClass: kube-vip.io/kube-vip-class
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 8080
      targetPort: https
      protocol: TCP
      name: devicecom
    - port: 8443
      targetPort: https-admin
      protocol: TCP
      name: webapi
    - port: 8880
      targetPort: http
      protocol: TCP
      name: httpredirects
    - port: 8843
      targetPort: https-api
      protocol: TCP
      name: httpsredirects
    - port: 6789
      targetPort: apollo
      protocol: TCP
      name: speedtest
  selector:
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-network-application-udp
  namespace: unifi-network-application
  labels:
    helm.sh/chart: unifi-network-application-2.6.1
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
    app.kubernetes.io/version: "8.0.24"
    app.kubernetes.io/managed-by: Helm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    kube-vip.io/egress: "true"
    kube-vip.io/egress-internal: "true"
    kube-vip.io/loadbalancerIPs: "10.0.0.132"
spec:
  type: LoadBalancer
  loadBalancerClass: kube-vip.io/kube-vip-class
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 10001
      targetPort: apollo-udp
      protocol: UDP
      name: apdiscovery
    - port: 3478
      targetPort: apollo-stun
      protocol: UDP
      name: stun
  selector:
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
