kubernetes/unifi-network-application/components/unifi-network-application/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
  labels:
    helm.sh/chart: unifi-network-application-2.6.1
    app.kubernetes.io/name: unifi-network-application
    app.kubernetes.io/instance: unifi-network-application
    app.kubernetes.io/version: "8.0.24"
    app.kubernetes.io/managed-by: Helm
  annotations:
    externaldns.k8s.io: unifi
    argocd.argoproj.io/sync-wave: "1"
    # checkov:skip=CKV_SECRET_6 PlaceHolder Values
    route.openshift.io/destination-ca-certificate-secret: internal-cert
    route.openshift.io/termination: reencrypt
spec:
  tls:
    - hosts:
        - unifi.arthurvardevanyan.com
      secretName: unifi-cert
  ingressClassName: openshift-default
  rules:
    - host: "unifi.arthurvardevanyan.com"
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: "unifi-network-application-tcp"
                port:
                  name: https-admin
